# sidra-fetcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_read_periodos.py
.github/workflows/: publish.yml  test.yml
src/sidra_fetcher/: __init__.py  __main__.py  agregados.py  cli.py  download.py  fetcher.py  periodos.py  plugin.py  reader.py  sidra.py  stats.py  storage.py
tests/: test_agregados.py  test_download.py  test_fetcher.py  test_periodos.py  test_sidra.py  test_stats.py
