[project]
name = "sidra-fetcher"
version = "0.6.1"
description = "A Python package for fetching data from IBGE's SIDRA and Agregados APIs"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "ibge",
    "sidra",
    "agregados",
    "brazil",
    "statistics",
    "open-data",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "quantilica-core @ git+https://github.com/Quantilica/quantilica-core.git",
]

[project.urls]
Homepage = "https://github.com/Quantilica/sidra-fetcher"
Repository = "https://github.com/Quantilica/sidra-fetcher"
Issues = "https://github.com/Quantilica/sidra-fetcher/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Mock setup must precede package imports in this test file
"tests/test_fetcher.py" = ["E402"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
