[project]
name = "sidra-fetcher"
version = "0.8.0"
description = "A Python package for fetching data from IBGE's SIDRA and Agregados APIs"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = [
    "ibge",
    "sidra",
    "agregados",
    "brazil",
    "statistics",
    "open-data",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "quantilica-core>=0.3.1",
]

[project.scripts]
sidra-fetcher = "sidra_fetcher.cli:main"

[project.entry-points."quantilica.fetchers"]
sidra = "sidra_fetcher.plugin:app"

[project.urls]
Homepage = "https://github.com/Quantilica/sidra-fetcher"
Repository = "https://github.com/Quantilica/sidra-fetcher"
Issues = "https://github.com/Quantilica/sidra-fetcher/issues"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Mock setup must precede package imports in this test file
"tests/test_fetcher.py" = ["E402"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
